--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
   run_tests:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v2
+    - uses: stefanzweifel/git-auto-commit-action@v4
     - name: Run script file
       run: |
          chmod +x ./runme.sh
