--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
   run_tests:
     runs-on: ubuntu-20.04
     steps:
-    - uses: stefanzweifel/git-auto-commit-action@v4
+    - uses: actions/checkout@v3
     - name: Run script file
       run: |
          chmod +x ./runme.sh
@@ -15,3 +15,4 @@ jobs:
       run: |
         git commit -m "<some commit message>"
         git push
+    - uses: stefanzweifel/git-auto-commit-action@v4
