--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   push:
   schedule:
     # min hours day(month) month day(week)
-    - cron: '0 0 */1 * *'
+    - cron: "0 0 * * *"
 jobs:
   run_tests:
     runs-on: ubuntu-20.04
